--- a/options.html
+++ b/options.html
@@ -6,8 +6,9 @@
         language:
         <select id="language">
             <option value="us">English</option>
+            <option value="fr">French</option>
             <option value="pt-br">Portugues</option>
-            <option value="gra">Britain</option>
+            <option value="es">Spanish</option>
         </select>
 
 
