--- a/app/options/index.html
+++ b/app/options/index.html
@@ -14,7 +14,7 @@
 
         <button id="save">Save</button>
 
-        <script src="options.js"></script>
+        <script src="/app/options/main.js"></script>
 
     </body>
 </html>
