--- a/app/popup/index.html
+++ b/app/popup/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <title>Random Wikipedia</title>
-      <script src="popup.js"></script>
+      <script src="/app/popup/main.js"></script>
     </head>
     <body></body>
 </html>
