--- a/app/options/index.html
+++ b/app/options/index.html
@@ -5,10 +5,15 @@
 
         language:
         <select id="language">
-            <option value="us">English</option>
+            <option value="us" selected>English</option>
+            <option value="ja">Japonese</option>
             <option value="fr">French</option>
+            <option value="de">Deutsch</option>
+            <option value="it">Italiano</option>
             <option value="pt-br">Portugues</option>
+            <option value="pl">Polski</option>
             <option value="es">Spanish</option>
+            <option value="ru">Russian</option>
         </select>
 
 
