Adicionada novas Language's
Adicionada o incrível e bravo goleiro Nederlands.

--- a/app/options/index.html
+++ b/app/options/index.html
@@ -12,6 +12,7 @@
             <option value="it">Italiano</option>
             <option value="pt-br">Portugues</option>
             <option value="pl">Polski</option>
+            <option value="nl">Nederlands</option>
             <option value="es">Spanish</option>
             <option value="ru">Russian</option>
         </select>
