--- a/app/popup/index.html
+++ b/app/popup/index.html
@@ -1,8 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-      <title>Random Wikipedia</title>
-      <script src="/app/popup/main.js"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="../../favicon.ico">
+        <title>Random Wikipedia</title>
     </head>
-    <body></body>
+    <body>
+        <script src="/assets/js/main.js"></script>
+    </body>
 </html>
