--- a/app/options/index.html
+++ b/app/options/index.html
@@ -9,10 +9,9 @@
         <link rel="icon" href="../../favicon.ico">
         <title>Options</title>
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-            <link href="/assets/css/cover.css" rel="stylesheet">
-        <link href="cover.css" rel="stylesheet">
+        <link href="/assets/css/cover.css" rel="stylesheet">
     </head>
-    <body>
+    <body id="options">
         <div class="site-wrapper">
             <div class="site-wrapper-inner">
                 <div class="cover-container">
@@ -42,8 +41,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="/assets/js/main.js"></script>
-        <script src="/assets/js/bootstrap.min.js"></script>
+        <script src="/assets/js/options.js"></script>
+        <!-- <script src="/assets/js/bootstrap.min.js"></script> -->
     </body>
 </html>
