--- a/app/popup/index.html
+++ b/app/popup/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="../../favicon.ico">
         <title>Random Wikipedia</title>
     </head>
-    <body>
-        <script src="/assets/js/main.js"></script>
+    <body id="random-page">
+        <script src="/assets/js/popup.js"></script>
     </body>
 </html>
