--- a/app/popup/index.html
+++ b/app/popup/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="icon" href="../../favicon.ico">
-        <title>Random Wikipedia</title>
+        <title>Rapid Acess Google Drive</title>
     </head>
     <body id="random-page">
         <script src="/assets/js/popup.js"></script>
